# tg_bot

./: LICENSE  README.md  docker-compose.yml  env.template
src/: Dockerfile  api.py  bot.py  pyproject.toml  symbols.py  utils.py
